--- a/blog-post-details.html
+++ b/blog-post-details.html
@@ -44,15 +44,17 @@
                     </button>
 
                     <!-- lOGO TEXT HERE -->
-                    <a href="#" class="navbar-brand">PARMS XCLUSIVE CAR LTD <span class="fa fa-car"></span></a>
+                    <a href="index.html" class="navbar-brand" style="color: white;">
+                         <img src="images/logo2.jpg" alt="PARMS XCLUSIVE CARS LTD" class="navbar-logo"> PARMS XCLUSIVE CARS LTD
+                    </a>
                </div>
 
                <!-- MENU LINKS -->
                <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-nav-first">
-                         <li><a href="index.html">Home</a></li>
+                         <!-- <li><a href="index.html">Home</a></li> -->
 						 <li><a href="cars.html">Buy a Car</a></li>
-                               <li><a href="sell.html" target="_blank">Sell Your Car</a></li>
+                               <li><a href="sell.html">Sell Your Car</a></li>
                                <li><a href="drive-in.html" target="_blank">Drive In</a></li>
 	                     <li><a href="about-us.html">About Us</a></li>
                          <li class="dropdown">
